Interface - Página Inicial
Alterada a página inicial, adicionado logo e favicon

--- a/Interface/entrar/index.html
+++ b/Interface/entrar/index.html
@@ -29,7 +29,7 @@
         <form class="login-section__form container">
           
           <div class="row col s12 l6 offset-l2">
-            <p class="center nunito login-section__title">Almoçaí</p>
+            <img class="no-select" src="../assets/img/logo-verde.svg">
           </div>
           
           <div class="row">
