--- a/Interface/aluno/cardapio/index.html
+++ b/Interface/aluno/cardapio/index.html
@@ -11,8 +11,8 @@
   <link rel="shortcut icon" href="../../assets/img/favicon.png" />
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- CSS -->
@@ -24,31 +24,30 @@
   <header>
 
     <nav class="navbar-transparent">
-      <!-- TODO:: Fazer navbar transparent -->
       <div class="nav-wrapper container">
-        <a class="no-select brand-logo nunito"><i class="material-icons left">restaurant</i>Almoçaí</a>
+        <img class="no-select brand-logo" src="../../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="waves-effect" href="#"><i class="material-icons left">home</i>Página Inicial</a></li> 
-          <li><a class="waves-effect" href="#"><i class="material-icons left">face</i>Perfil</a></li> 
-          <li><a class="waves-effect active" href="#"><i class="material-icons left">menu_book</i>Cardápio</a></li>
-          <li><a class="waves-effect" href="#"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+          <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
+          <li><a class="waves-effect" href="../perfil/"><i class="material-icons left">face</i>Perfil</a></li> 
+          <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Cardápio</a></li>
+          <li><a class="waves-effect" href="../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
         </ul>
       </div>
     </nav>
 
     <ul class="sidenav" id="mobile-sidenav">
       <li class="nunito almocai-text center" style="font-size: 2rem; padding: .5rem;">Almoçaí</li>
-      <li><a class="waves-effect" href="#"><i class="material-icons left">home</i>Página Inicial</a></li> 
-      <li><a class="waves-effect" href="#"><i class="material-icons left">face</i>Perfil</a></li>
-      <li><a class="active waves-effect" href="#"><i class="material-icons left">menu_book</i>Cardápio</a></li>
-      <li><a class="waves-effect" href="#"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+      <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
+      <li><a class="waves-effect" href="../perfil/"><i class="material-icons left">face</i>Perfil</a></li> 
+      <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Cardápio</a></li>
+      <li><a class="waves-effect" href="../../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </header>
 
   <main>
 
-    <div class="section banner valign-wrapper" style="margin-top: -4.5rem;">
+    <div class="section banner banner--1 valign-wrapper" style="margin-top: -4.5rem;">
       <div class="row">
         <div class="col s12">
           <h1 class="banner__titulo">Cardápio</h1>
@@ -60,8 +59,8 @@
     <div class="section container cardapio">
       <div class="row">
         
-        <!-- Primeiro catão -->
-        <div class="col s12 m6 l3">
+        <!-- Primeiro cartão -->
+        <div class="col s12 m6 l4 xl3">
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--1"></div>
             <h4 class="cardapio__cabecalho">
@@ -82,7 +81,7 @@
         </div>
 
         <!-- Segundo cartão -->
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4 xl3">
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--2"></div>
             <h4 class="cardapio__cabecalho">
@@ -103,7 +102,7 @@
         </div>
 
         <!-- Terceiro cartão -->
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4 xl3">
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--3"></div>
             <h4 class="cardapio__cabecalho">
@@ -124,7 +123,7 @@
         </div>
 
         <!-- Quarto cartão -->
-        <div class="col s12 m6 l3">
+        <div class="col s12 m6 l4 offset-l4 xl3">
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--4"></div>
             <h4 class="cardapio__cabecalho">
@@ -144,6 +143,15 @@
           </div>
         </div>
 
+      </div>
+    </div>
+
+    <!-- Mensagem caso não haja cardápio -->
+    <div class="section container">
+      <div class="row">
+        <div class="cardapio__indisponivel card col s12 m6 offset-m3">
+          <h2 class="no-select">Cardápio indisponível</h2>
+        </div>
       </div>
     </div>
 
