--- a/Interface/entrar/index.html
+++ b/Interface/entrar/index.html
@@ -11,8 +11,8 @@
   <link rel="shortcut icon" href="../assets/img/favicon.png" />
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- CSS -->
@@ -29,7 +29,7 @@
         <form class="login-section__form container">
           
           <div class="row col s12 l6 offset-l2">
-            <img class="no-select" src="../assets/img/logo-verde.svg">
+            <img class="no-select " src="../assets/img/logo-verde.svg">
           </div>
           
           <div class="row">
