--- a/Interface/aluno/cardapio/index.html
+++ b/Interface/aluno/cardapio/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <ul class="sidenav" id="mobile-sidenav">
-      <li class="nunito almocai-text center" style="font-size: 2rem; padding: .5rem;">Almoçaí</li>
+      <li class="sidenav__logo"><img src="../assets/img/logo-verde.svg"></li>
       <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
       <li><a class="waves-effect" href="../perfil/"><i class="material-icons left">face</i>Perfil</a></li> 
       <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Cardápio</a></li>
@@ -64,7 +64,7 @@
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--1"></div>
             <h4 class="cardapio__cabecalho">
-              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--1">Segunda-feira</span>
+              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--1">Segunda feira</span>
             </h4>
             <div class="row">
               <div class="col s12">
@@ -73,7 +73,7 @@
                   <li>Feijão</li>
                   <li>Nhoque</li>
                   <li>Salada</li>
-                  <li>Panqueca <img src="../../assets/img/cartoes/folha.svg" alt="folha" class="cardapio__lista--veggie"></li>
+                  <li>Panqueca <img src="../../assets/img/aluno/cartoes/folha.svg" class="cardapio__lista--icon"></li>
                 </ul>
               </div>
             </div>
@@ -85,7 +85,7 @@
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--2"></div>
             <h4 class="cardapio__cabecalho">
-              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--2">Terça-feira</span>
+              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--2">Terça feira</span>
             </h4>
             <div class="row">
               <div class="col s12">
@@ -94,7 +94,7 @@
                   <li>Feijão</li>
                   <li>Macarrão</li>
                   <li>Salada</li>
-                  <li>Bolinho de arroz <img src="../../assets/img/cartoes/folha.svg" alt="folha" class="cardapio__lista--veggie"></li>
+                  <li>Bolinho de arroz <img src="../../assets/img/aluno/cartoes/folha.svg" class="cardapio__lista--icon"></li>
                 </ul>
               </div>
             </div>
@@ -106,7 +106,7 @@
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--3"></div>
             <h4 class="cardapio__cabecalho">
-              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--3">Quarta-feira</span>
+              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--3">Quarta feira</span>
             </h4>
             <div class="row">
               <div class="col s12">
@@ -115,7 +115,7 @@
                   <li>Feijão</li>
                   <li>Polenta</li>
                   <li>Salada</li>
-                  <li>Ovo frito <img src="../../assets/img/cartoes/folha.svg" alt="folha" class="cardapio__lista--veggie"></li>
+                  <li>Bife <img src="../../assets/img/aluno/cartoes/carne.svg" class="cardapio__lista--icon"></li>
                 </ul>
               </div>
             </div>
@@ -127,7 +127,7 @@
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--4"></div>
             <h4 class="cardapio__cabecalho">
-              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--4">Quinta-feira</span>
+              <span class="cardapio__cabecalho-span cardapio__cabecalho-span--4">Quinta feira</span>
             </h4>
             <div class="row">
               <div class="col s12">
@@ -136,7 +136,7 @@
                   <li>Feijão</li>
                   <li>Nhoque</li>
                   <li>Salada</li>
-                  <li>Legumes <img src="../../assets/img/cartoes/folha.svg" alt="folha" class="cardapio__lista--veggie"></li>
+                  <li>Legumes <img src="../../assets/img/aluno/cartoes/folha.svg" class="cardapio__lista--icon"></li>
                 </ul>
               </div>
             </div>
