Interface - PWA e correções
Adicionado sistema de Progressive Web Apps, e realizado pequenas correções na questão da interface de login.

--- a/Interface/aluno/cardapio/index.html
+++ b/Interface/aluno/cardapio/index.html
@@ -8,7 +8,10 @@
   <title>Cardápio - Almoçaí</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="../../assets/img/favicon.png" />
+  <link rel="shortcut icon" href="../../assets/img/icons/icon-128x128.png" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="../../assets/pwa/manifest.json">
 
   <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200" rel="stylesheet">
@@ -37,7 +40,7 @@
     </nav>
 
     <ul class="sidenav" id="mobile-sidenav">
-      <li class="sidenav__logo"><img src="../assets/img/logo-verde.svg"></li>
+      <li class="sidenav__logo"><img src="../../assets/img/logo-verde.svg"></li>
       <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li> 
       <li><a class="waves-effect" href="../perfil/"><i class="material-icons left">face</i>Perfil</a></li> 
       <li><a class="waves-effect active" href="./"><i class="material-icons left">menu_book</i>Cardápio</a></li>
