--- a/Interface/aluno/index.html
+++ b/Interface/aluno/index.html
@@ -8,7 +8,10 @@
   <title>Página Inicial - Almoçaí</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="../assets/img/favicon.png" />
+  <link rel="shortcut icon" href="../assets/img/icons/icon-128x128.png" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="../assets/pwa/manifest.json">
 
   <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200" rel="stylesheet">
