--- a/Interface/aluno/perfil/index.html
+++ b/Interface/aluno/perfil/index.html
@@ -8,7 +8,10 @@
   <title>Perfil - Almoçaí</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="../../assets/img/favicon.png" />
+  <link rel="shortcut icon" href="../../assets/img/icons/icon-128x128.png" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="../../assets/pwa/manifest.json">
 
   <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200" rel="stylesheet">
@@ -87,7 +90,7 @@
             <!-- Cartão intolerancia -->
             <div class="col s12 padding-card-small">
               <div class="card hoverable perfil__cartao-intolerancia">
-                <h4 class="perfil__cartao-intolerancia--titulo">Você possui alguma intolerância alimentar?</h4>
+                <h4 class="perfil__cartao-intolerancia--titulo">Você possui alguma intolerância/alergia alimentar?</h4>
                 <div class="row">
                   <div class="col s12">
                     <div class="input-field">
@@ -184,29 +187,11 @@
           </div>
         </div>
 
-        <div class="col s12 m6 offset-m3 l4">
+        <div class="col s12 m6 l4">
           <div class="row">
 
-            <!-- Cartão alterar senha -->
-            <div class="col s12">
-              <div class="card hoverable perfil__cartao-alterar-senha">
-                <h4 class="perfil__cartao-alterar-senha--titulo">Alterar informações pessoais</h4>
-                  <div class="row">
-                    <div class="col s12">
-                      <div class="input-field col s12">
-                        <input id="confirmacaoSenha" type="password">
-                        <label for="confirmacaoSenha">Confirme sua senha</label>
-                      </div>
-                    </div>
-                    <div class="col s12 center">
-                      <button class="waves-effect waves-light btn">Alterar</button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-
               <!-- Cartão alterar senha -->
-              <div class="col s12" style="padding: 0">
+              <div class="col s12">
                 <div class="card hoverable perfil__cartao-alterar-senha">
                   <h4 class="perfil__cartao-alterar-senha--titulo">Altere sua senha</h4>
                   <form name="alteraSenha" action="">
@@ -251,7 +236,7 @@
       var instances = M.Sidenav.init(elems);
     });
 
-    // Autocomplete intolerancia
+    // Autocomplete intolerância/alergia alimentar
     document.addEventListener('DOMContentLoaded', function() {
       var elems = document.querySelectorAll('.autocomplete');
       var instances = M.Autocomplete.init(elems, {
@@ -261,7 +246,8 @@
           "Ovo": null,
           "Soja": null,
           "Milho": null,
-          "Levedura": null
+          "Levedura": null,
+          "Corantes amarelos": null
         }
       });
     });
