--- a/Interface/entrar/index.html
+++ b/Interface/entrar/index.html
@@ -57,7 +57,7 @@
           </div>
           
           <div class="row center col s12 l6 offset-l2 login-section__padding-zero">
-            <button class="waves-effect waves-light btn login-section__button">Entrar</button>
+            <a class="waves-effect waves-light btn login-section__button" href="../aluno">Entrar</a>
           </div>
 
         </form>
