--- a/Interface/aluno/index.html
+++ b/Interface/aluno/index.html
@@ -50,7 +50,7 @@
 
   <main>
 
-    <div class="section banner valign-wrapper banner--2" style="margin-top: -4.5rem;">
+    <div class="section banner valign-wrapper banner--2">
       <div class="row">
         <div class="col s12">
           <h1 class="banner__titulo">Bem vindo!</h1>
@@ -63,7 +63,7 @@
       <div class="row">
         
       <!-- Confimação do aluno -->
-        <div class="col s12 m6 l7 xl9">
+        <div class="col s12 m6 l7 xl8">
           <div class="row">
             <div class="card col s12 l8 offset-l2" style="padding: 2rem">
               <h4 class="confirmacao-aluno__titulo">Você irá almoçar no IFC hoje?</h4>
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Primeiro cartão -->
-        <div class="col s12 m6 l5 xl3 margin-zero-mobile">
+        <div class="col s12 m6 l5 xl4 margin-zero-mobile">
           <div class="card-panel cardapio__painel">
             <div class="cardapio__picture cardapio__picture--1"></div>
             <h4 class="cardapio__cabecalho">
@@ -112,9 +112,13 @@
     </div>
 
   </main>
-
-  <footer >
-    <!-- Apenas a parte de "copyright" -->
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+      © 2019 Almoçaí
+      <a class="right" href="">Sobre</a>
+      </div>
+    </div>
   </footer>
 
   <!-- JS -->
@@ -126,6 +130,5 @@
     });
   </script>
 </body>
-
 
 </html>
