--- a/Interface/aluno/perfil/index.html
+++ b/Interface/aluno/perfil/index.html
@@ -50,7 +50,7 @@
 
   <main>
 
-    <div class="section banner banner--3 valign-wrapper" style="margin-top: -4.5rem;">
+    <div class="section banner banner--3 valign-wrapper">
       <div class="row">
         <div class="col s12">
           <h1 class="banner__titulo">Fulano</h1>
