--- a/Interface/funcionario/index.html
+++ b/Interface/funcionario/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar">
       <div class="nav-wrapper container">
-        <img class="no-select brand-logo" src="../assets/img/logo-verde.svg">
+        <img class="no-select brand-logo logo-navbar-verde" src="../assets/img/logo-verde.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
@@ -47,8 +47,8 @@
     <div class="section row container">
       <div class="col s12 m6 offset-m3 l4 offset-l4">
         <div class="card hoverable">
-          <h6 class="servidor__subtitulo">Quantidade de alunos que irão almoçar hoje</h6>
-          <h6 class="servidor__quantidade">76</h6>
+          <h6 class="funcionario__subtitulo">Quantidade de alunos que irão almoçar hoje</h6>
+          <h6 class="funcionario__quantidade">76</h6>
         </div>
       </div>
     </div>
