Template - entrar (falta back-end)

--- a/template.html
+++ b/template.html
@@ -3,8 +3,8 @@
 
 <!--
   Itens necessários:
-  Informação: {title}, {root_path}, {peso_fonte}
-  Tags: {{nav}}, {{main}}, {{footer}}, {{scripts}}
+  Informação: {title, {root_path, {peso_fonte
+  Tags: {{nav, {{main, {{footer, {{scripts
  -->
 
 <head>
@@ -48,6 +48,4 @@
     {{scripts}}
   </script>
 </body>
-
-
 </html>
