Mudança diretório sair

--- a/cadastre-se/main.html
+++ b/cadastre-se/main.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card-panel hoverable">
-    <form class="" action="acao.php" method="post">
+    <form action="acao.php" method="post">
       <div class="row">
         <div class="input-field col s12">
           <label for="nome">Nome completo</label>
