--- a/entrar/main.html
+++ b/entrar/main.html
@@ -1,4 +1,4 @@
-<!-- {{erro -->
+<!-- {{erro, {root_path -->
 
 <div class="login-section valign-wrapper">
   <div class="row login-section__container">
