Valores {checked} nos templates de cartões do perfil do aluno

--- a/aluno/perfil/cartao_carne.html
+++ b/aluno/perfil/cartao_carne.html
@@ -4,25 +4,25 @@
     <div class="row perfil__cartao-carne--checkbox">
       <div class="col s6 xl3">
         <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" checked="checked" />
+          <input type="checkbox" class="filled-in" {carne_checked} />
           <span>Porco</span>
         </label>
       </div>
       <div class="col s6 xl3">
         <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" checked="checked" />
+          <input type="checkbox" class="filled-in" {carne_checked} />
           <span>Frango</span>
         </label>
       </div>
       <div class="col s6 xl3">
         <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" checked="checked" />
+          <input type="checkbox" class="filled-in" {carne_checked} />
           <span>Peixe</span>
         </label>
       </div>
       <div class="col s6 xl3">
         <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" checked="checked" />
+          <input type="checkbox" class="filled-in" {carne_checked} />
           <span>Gado</span>
         </label>
       </div>
