--- a/aluno/perfil/cartao_almoco.html
+++ b/aluno/perfil/cartao_almoco.html
@@ -4,13 +4,13 @@
     <div class="row perfil__cartao-almoca--radio">
       <div class="col s6">
         <label class="radio-azul">
-          <input name="almoca" class="with-gap" type="radio" checked="checked" />
+          <input name="almoca" class="with-gap" type="radio" {almoco_checked} />
           <span>Sim</span>
         </label>
       </div>
       <div class="col s6">
         <label class="radio-azul">
-          <input name="almoca" class="with-gap" type="radio" />
+          <input name="almoca" class="with-gap" type="radio" {almoco_checked} />
           <span>Não</span>
         </label>
       </div>
