--- a/aluno/perfil/cartao_vegetariano.html
+++ b/aluno/perfil/cartao_vegetariano.html
@@ -4,13 +4,13 @@
     <div class="row perfil__cartao-vegetariano--radio">
       <div class="col s6">
         <label class="radio-amarelo">
-          <input name="vegetariano" class="with-gap" type="radio" />
+          <input name="vegetariano" class="with-gap" type="radio" {vegetariano_checked} />
           <span>Sim</span>
         </label>
       </div>
       <div class="col s6">
         <label class="radio-amarelo">
-          <input name="vegetariano" class="with-gap" type="radio" checked="checked" />
+          <input name="vegetariano" class="with-gap" type="radio" {vegetariano_checked} />
           <span>Não</span>
         </label>
       </div>
