--- a/aluno/perfil/cartao_alt_senha.html
+++ b/aluno/perfil/cartao_alt_senha.html
@@ -1,23 +1,24 @@
 <div class="col s12">
   <div class="card hoverable perfil__cartao-alterar-senha">
     <h4 class="perfil__cartao-alterar-senha--titulo">Altere sua senha</h4>
-    <form name="alteraSenha" action="">
+    <form name="alteraSenha" action="acao.php" method="post">
       <div class="row">
         <div class="col s12">
           <div class="input-field col s12">
-            <input id="senhaNova" type="password">
+            <input id="senhaNova" type="password" name="senhaNova">
             <label for="senhaNova">Senha nova</label>
           </div>
         </div>
         <div class="col s12">
           <div class="input-field col s12">
             <!-- Adicionar sistema de verificação de senha -->
-            <input id="senhaAntiga" type="password">
+            <input id="senhaAntiga" type="password" name="senhaAntiga">
             <label for="senhaAntiga">Senha antiga</label>
           </div>
         </div>
         <div class="col s12 center">
-          <button class="waves-effect waves-light btn">Alterar</button>
+          <button class="waves-effect waves-light btn"
+          type="submit" name="acao" value="AlterarSenha">Alterar</button>
         </div>
     </form>
   </div>
