Integração "que carnes come?" do aluno/perfil com BD

--- a/aluno/perfil/cartao_carne.html
+++ b/aluno/perfil/cartao_carne.html
@@ -2,30 +2,7 @@
   <div class="card hoverable perfil__cartao-carne">
     <h4 class="perfil__cartao-carne--titulo">Quais tipos de carne você come?</h4>
     <div class="row perfil__cartao-carne--checkbox">
-      <div class="col s6 xl3">
-        <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" {carne_checked} />
-          <span>Porco</span>
-        </label>
-      </div>
-      <div class="col s6 xl3">
-        <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" {carne_checked} />
-          <span>Frango</span>
-        </label>
-      </div>
-      <div class="col s6 xl3">
-        <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" {carne_checked} />
-          <span>Peixe</span>
-        </label>
-      </div>
-      <div class="col s6 xl3">
-        <label class="checkbox-vermelho">
-          <input type="checkbox" class="filled-in" {carne_checked} />
-          <span>Gado</span>
-        </label>
-      </div>
+      {{carnes}}
     </div>
   </div>
 </div>
