Cartão alimentação no perfil + Back-end frequência do aluno (se sempre almoça, as vezes etc.)

--- a/aluno/perfil/main.html
+++ b/aluno/perfil/main.html
@@ -30,11 +30,8 @@
         <!-- Cartão carne -->
         {{cartao_carne}}
 
-        <!-- Cartão vegetariano -->
-        {{cartao_vegetariano}}
-
-        <!-- Cartão vegano -->
-        {{cartao_vegano}}
+        <!-- Cartão alimentação -- seleção se é vegetariano, vegano ou nenhum -->
+        {{alimentacao}}
 
       </div>
     </div>
