Integração frequência / BD -- falta os formulários dos cartões funcionarem, mas as informações disponíveis já vêm do BD

--- a/aluno/perfil/main.html
+++ b/aluno/perfil/main.html
@@ -15,7 +15,7 @@
       <form name="alteraSenha" action="">
 
         <!-- Cartão almoça todos os dias -->
-        {{cartao_almoco}}
+        {{cartao_frequencia}}
   
         <!-- Cartão intolerancia -->
         {{cartao_intolerancia}}
@@ -31,7 +31,7 @@
         {{cartao_carne}}
 
         <!-- Cartão alimentação -- seleção se é vegetariano, vegano ou nenhum -->
-        {{alimentacao}}
+        {{cartao_alimentacao}}
 
       </div>
     </div>
