Função genérica para gerar cartões com checkbox ou radio que pegam seus itens de uma tabela do BD

--- a/aluno/perfil/cartao_carne.html
+++ b/aluno/perfil/cartao_carne.html
@@ -2,7 +2,7 @@
   <div class="card hoverable perfil__cartao-carne">
     <h4 class="perfil__cartao-carne--titulo">Quais tipos de carne você come?</h4>
     <div class="row perfil__cartao-carne--checkbox">
-      {{carnes}}
+      {{itens}}
     </div>
   </div>
 </div>
