--- a/Interface/administrador/alunos/index.html
+++ b/Interface/administrador/alunos/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="../../assets/pwa/manifest.json">
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -26,9 +26,9 @@
 
   <header>
 
-    <nav class="navbar">
+    <nav class="navbar-transparent">
       <div class="nav-wrapper container">
-        <img class="no-select brand-logo logo-navbar-verde" src="../../assets/img/logo-verde.svg">
+        <img class="no-select brand-logo" src="../../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li>
@@ -46,13 +46,16 @@
 
   <main>
 
-    <div class="container">
+    <div class="section banner valign-wrapper banner--5">
       <div class="row">
         <div class="col s12">
-          <h3 class="adm__tabela--titulo">Gerenciamento de alunos</h3>
+          <h1 class="banner__titulo">Gerenciamento</h1>
+          <h4 class="banner__subtitulo">de alunos</h4>
         </div>
       </div>
+    </div>
 
+    <div class="container">
       <!-- Adicionar aluno -->
       <div class="row">
         <div class="col s12 card adm__inserir">
