--- a/Interface/entrar/index.html
+++ b/Interface/entrar/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="../assets/pwa/manifest.json">
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -57,7 +57,7 @@
           </div>
           
           <div class="row center col s12 l6 offset-l2 login-section__padding-zero">
-            <a class="waves-effect waves-light btn login-section__button" href="../aluno">Entrar</a>
+            <a class="waves-effect waves-light btn login-section__button bold" href="../aluno">Entrar</a>
           </div>
 
         </form>
