aluno/ em template + integração back-end

--- a/componentes/nav-funcionario.html
+++ b/componentes/nav-funcionario.html
@@ -3,6 +3,14 @@
     <img class="no-select brand-logo logo-navbar-verde" src="{root_path}assets/img/logo-verde.svg">
     <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
+      <li><a class="waves-effect" href="cardapio/criar">
+        Criar cardápio
+        <i class="material-icons right">menu_book</i>
+      </a></li>
+      <li><a class="waves-effect" href="cardapio/gerenciar">
+        Gerenciar cardápio
+        <i class="material-icons right">menu_book</i>
+      </a></li>
       <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </div>
@@ -10,5 +18,13 @@
 
 <ul class="sidenav" id="mobile-sidenav">
   <li class="sidenav__logo"><img src="{root_path}assets/img/logo-verde.svg"></li>
+  <li><a class="waves-effect" href="cardapio/criar">
+    Criar cardápio
+    <i class="material-icons right">menu_book</i>
+  </a></li>
+  <li><a class="waves-effect" href="cardapio/gerenciar">
+    Gerenciar cardápio
+    <i class="material-icons right">menu_book</i>
+  </a></li>
   <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
 </ul>
