--- a/funcionario/cardapio/criar/main.html
+++ b/funcionario/cardapio/criar/main.html
@@ -1,15 +1,17 @@
-<form action="acao.php" method="post">
-  
-  <div class="input-field">
-    <label for="data_inicio">Data de início (segunda-feira)</label>
-    <input type="date" name="data_inicio" id="data_inicio"/> 
-  </div>
+<div class="container">
+  <form action="acao.php" method="post">
+    
+    <div class="input-field">
+      <input type="date" name="data_inicio" id="data_inicio"/> 
+      <span class="helper-text">Data de início (segunda-feira)</span>
+    </div>
 
-  <div class="input-field">
-    <button type="submit" name="acao" value="CriarCardapio"
-    class="btn waves-effect waves-light" type="submit">
-      Criar cardápio
-    </button>
-  </div>
+    <div class="input-field">
+      <button type="submit" name="acao" value="CriarCardapio"
+      class="btn waves-effect waves-light" type="submit">
+        Criar cardápio
+      </button>
+    </div>
 
-</form>
+  </form>
+</div>
