--- a/administrador/componentes/linha_usuario.html
+++ b/administrador/componentes/linha_usuario.html
@@ -1,4 +1,4 @@
-<!-- {matricula {nome -->
+<!-- {matricula {nome {tipo -->
 
 <tr>
   <td>{matricula}</td>
@@ -8,28 +8,31 @@
   <td><a href="#alterar{matricula}" class="modal-trigger"><i class="material-icons adm__tabela--alterar">edit</i></a></td>
 
   <div id="alterar{matricula}" class="modal adm__tabela--alterar-modal">
-    <div class="modal-content">
-      <h4 class="almocai-text">Alterar informações</h4>
+    <form action="{root_path}administrador/acao.php" method="post">
+      <div class="modal-content">
+        <h4 class="almocai-text {cor_texto}">Alterar informações</h4>
       
-      <form class="row" action="{root_path}administrador/acao.php" method="post">
-        <div class="input-field col s12">
-          <input id="nomeAlterar{matricula}" type="text" value="{nome}">
-          <label for="nomeAlterar{matricula}">Nome</label>
+        <div class="row">
+          <input type="hidden" name="matricula" value="{matricula}"/>
+          <input type="hidden" name="tipo" value="{tipo}" />
+          <div class="input-field col s12">
+            <input id="nome" name="nome" type="text" value="{nome}">
+            <label for="nome">Nome</label>
+          </div>
         </div>
-        <div class="input-field col s12">
-          <input id="senhaAlterar{matricula}" type="password">
-          <label for="senhaAlterar{matricula}">Senha</label>
+
+        <div class="modal-footer row">
+          <div class="col s12 center m2">
+            <a class="modal-close waves-effect waves-almocai btn-flat">Cancelar</a>
+          </div>
+          <div class="col s12 m2 offset-m8 center">
+            <button class="waves-effect waves-light btn adm__inserir--btn almocai {cor_btn} bold"
+            type="submit" name="acao" value="Update">
+              Confirmar
+            </button>
+          </div>
         </div>
       </form>
-
-      <div class="modal-footer row">
-        <div class="col s12 center m2">
-          <a class="modal-close waves-effect waves-almocai btn-flat">Cancelar</a>
-        </div>
-        <div class="col s12 m2 offset-m8 center">
-          <button class="waves-effect waves-light btn adm__inserir--btn almocai">Confirmar</button>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -44,11 +47,11 @@
     </div>
     <div class="modal-footer transparent">
       <a class="modal-close waves-effect waves-almocai btn-flat left almocai-text text-branco bold">Cancelar</a>
-      <button
+      <a
         class="waves-effect waves-light btn adm__inserir--btn almocai branco almocai-text text-vermelho right bold"
-        href="{root_path}administrador/componentes/acao.php?acao=Delete&matricula={matricula}">
+        href="{root_path}administrador/acao.php?acao=Delete&matricula={matricula}&tipo={tipo}">
           Confirmar
-        </button>
+        </a>
     </div>
   </div>
 </tr>
