Parcial template funcionario/

--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar-transparent">
   <div class="nav-wrapper container">
     <img class="no-select brand-logo logo-navbar-verde" src="{root_path}assets/img/logo-verde.svg">
     <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
