--- a/componentes/nav-administrador.html
+++ b/componentes/nav-administrador.html
@@ -4,7 +4,7 @@
     <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}administrador/"><i class="material-icons left">home</i>Página Inicial</a></li>
-      <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+      <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </div>
 </nav>
