--- a/componentes/nav.html
+++ b/componentes/nav.html
@@ -6,7 +6,7 @@
       <li><a class="waves-effect" href="./"><i class="material-icons left">home</i>Página Inicial</a></li>
       <li><a class="waves-effect" href="{root_path}aluno/perfil/"><i class="material-icons left">face</i>Perfil</a></li>
       <li><a class="waves-effect" href="{root_path}aluno/cardapio/"><i class="material-icons left">menu_book</i>Cardápio</a></li>
-      <li><a class="waves-effect" href="{root_path}aluno/sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+      <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </div>
 </nav>
@@ -16,5 +16,5 @@
   <li><a class="waves-effect active" href="./"><i class="material-icons left">home</i>Página Inicial</a></li>
   <li><a class="waves-effect" href="{root_path}aluno/perfil/"><i class="material-icons left">face</i>Perfil</a></li>
   <li><a class="waves-effect" href="{root_path}aluno/cardapio/"><i class="material-icons left">menu_book</i>Cardápio</a></li>
-  <li><a class="waves-effect" href="{root_path}aluno/sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+  <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
 </ul>
