--- a/Interface/funcionario/index.html
+++ b/Interface/funcionario/index.html
@@ -91,7 +91,7 @@
     <div class="funcionario container">
       <div class="row">
         <div class="cardapio__indisponivel card col s12 m6 offset-m3">
-          <h2 class="no-select">Quantidade ainda não definida</h2>
+          <h2 class="no-select">Quantidade de alunos ainda não definida</h2>
         </div>
       </div>
     </div>
