--- a/Interface/aluno/perfil/index.html
+++ b/Interface/aluno/perfil/index.html
@@ -68,7 +68,7 @@
   
             <!-- Cartão almoça todos os dias -->
             <div class="col s12 padding-card-small">
-              <div class="card hoverable perfil__cartao-almoca">
+              <div class="card hoverable perfil__cartao-almoca aumentar-hover">
                 <h4 class="perfil__cartao-almoca--titulo">Você almoça no IFC todos os dias?</h4>
                 <div class="row perfil__cartao-almoca--radio">
                   <div class="col s6">
@@ -89,7 +89,7 @@
       
             <!-- Cartão intolerancia -->
             <div class="col s12 padding-card-small">
-              <div class="card hoverable perfil__cartao-intolerancia">
+              <div class="card hoverable perfil__cartao-intolerancia aumentar-hover">
                 <h4 class="perfil__cartao-intolerancia--titulo">Você possui alguma intolerância/alergia alimentar?</h4>
                 <div class="row">
                   <div class="col s12">
@@ -111,7 +111,7 @@
             
             <!-- Cartão carne -->
             <div class="col s12 padding-card-small">
-              <div class="card hoverable perfil__cartao-carne">
+              <div class="card hoverable perfil__cartao-carne aumentar-hover">
                 <h4 class="perfil__cartao-carne--titulo">Quais tipos de carne você come?</h4>
                 <div class="row perfil__cartao-carne--checkbox">
                   <div class="col s6 xl3">
@@ -144,7 +144,7 @@
 
             <!-- Cartão vegetariano -->
             <div class="col s12 padding-card-small">
-              <div class="card hoverable perfil__cartao-vegetariano">
+              <div class="card hoverable perfil__cartao-vegetariano aumentar-hover">
                 <h4 class="perfil__cartao-vegetariano--titulo">Você é vegetariano?</h4>
                 <div class="row perfil__cartao-vegetariano--radio">
                   <div class="col s6">
@@ -165,7 +165,7 @@
 
             <!-- Cartão vegano -->
             <div class="col s12 padding-card-small">
-              <div class="card hoverable perfil__cartao-vegano">
+              <div class="card hoverable perfil__cartao-vegano aumentar-hover">
                 <h4 class="perfil__cartao-vegano--titulo">Você é vegano?</h4>
                 <div class="row perfil__cartao-vegano--radio">
                   <div class="col s6">
@@ -192,7 +192,7 @@
 
               <!-- Cartão alterar senha -->
               <div class="col s12">
-                <div class="card hoverable perfil__cartao-alterar-senha">
+                <div class="card hoverable perfil__cartao-alterar-senha aumentar-hover">
                   <h4 class="perfil__cartao-alterar-senha--titulo">Altere sua senha</h4>
                   <form name="alteraSenha" action="">
                     <div class="row">
