--- a/Interface/nutricionista/index.html
+++ b/Interface/nutricionista/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="../assets/pwa/manifest.json">
 
   <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,200" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -26,9 +26,9 @@
 
   <header>
 
-    <nav class="navbar">
+    <nav class="navbar-transparent">
       <div class="nav-wrapper container">
-        <img class="no-select brand-logo logo-navbar-verde" src="../assets/img/logo-verde.svg">
+        <img class="no-select brand-logo" src="../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
@@ -44,38 +44,61 @@
 
   <main>
 
-    <div class="row">
-      <div class="col s12">
-        <h3 class="nutricionista__titulo">Almoço: 18/09</h3>
+    <div class="section banner valign-wrapper banner--9">
+      <div class="row">
+        <div class="col s12">
+          <!-- <h1 class="banner__titulo">Registar almoço</h1> 
+          <h4 class="banner__subtitulo">da próxima semana</h4> -->
+          <h1 class="banner__titulo">Almoço</h1> 
+          <h4 class="banner__subtitulo">18/09</h4>
+        </div>
       </div>
     </div>
 
-    <div class="nutricionista row container">
-      <div class="nutricionista__cartao col s12">
-        <div class="row">
-          <div class="col s12 m6 l3">
-            <h6>Quantidade de alunos que irão almoçar hoje</h6>
-            <h6>80</h6>
-          </div>
-          <div class="col s12 m6 l3">
-            <h6 class="nutricionista__tipo nutricionista__tipo--1">Vegetarianos</h6>
-            <h6 class="nutricionista__tipo nutricionista__tipo--1">Vegetarianos</h6>
-            
-          </div>
-          <div class="col s12 m6 l3">
-            <h6 class="nutricionista__tipo nutricionista__tipo--2">Veganos</h6>
-            <h6 class="nutricionista__tipo nutricionista__tipo--2">Veganos</h6>
-          </div>
-          <div class="col s12 m6 l3">
-            <h6 class="nutricionista__tipo nutricionista__tipo--3">Carnívoro</h6>
-            <h6 class="nutricionista__tipo nutricionista__tipo--3">Carnívoro</h6>
-          </div>
+    <!-- área com quantidade de alunos que irão almoçar conforme o dia -->
+    <div class="funcionario row container">
+      <div class="col s12 m6 l3">
+        <div class="funcionario__card almocai-text text-azul">
+          <h3 class="funcionario__card--title">Quantidade de alunos que irão almoçar hoje</h3>
+          <h4 class="funcionario__card--qtd">76</h4>
         </div>
       </div>
-    </div>  
+
+      <!-- Carnívoros -->
+      <div class="col s12 m6 l3">
+        <div class="funcionario__card almocai-text text-vermelho">
+          <h3 class="funcionario__card--title">Quantidade de alunos carnívoros</h3>
+          <h4 class="funcionario__card--qtd">60</h4>
+        </div>
+      </div>
+
+      <!-- Vegetarianos -->
+      <div class="col s12 m6 l3">
+        <div class="funcionario__card almocai-text text-amarelo">
+          <h3 class="funcionario__card--title">Quantidade de alunos vegetarianos</h3>
+          <h4 class="funcionario__card--qtd">8</h4>
+        </div>
+      </div>
+
+      <!-- Veganos -->
+      <div class="col s12 m6 l3">
+        <div class="funcionario__card almocai-text">
+          <h3 class="funcionario__card--title">Quantidade de alunos veganos</h3>
+          <h4 class="funcionario__card--qtd">8</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mensagem caso ainda não tenha a quantidade de alunos necessária -->
+    <div class="funcionario container">
+      <div class="row">
+        <div class="cardapio__indisponivel card col s12 m6 offset-m3">
+          <h2 class="no-select">Quantidade de alunos ainda não definida</h2>
+        </div>
+      </div>
+    </div>
 
   </main>
-  
   <footer class="page-footer">
     <div class="footer-copyright">
       <div class="container">
