Aluno index - só mostra confirmação de presença caso a semana a que o dia atual pertence exista no BD

--- a/aluno/main.html
+++ b/aluno/main.html
@@ -10,28 +10,8 @@
 <div class="section container">
   <div class="row">
 
-  <!-- Confimação do aluno -->
-    <div class="col s12 m6 l7 xl8">
-      <form class="row" action="acao.php" method="post">
-        <div class="card col s12 l8 offset-l2" style="padding: 2rem">
-          <h4 class="confirmacao-aluno__titulo">Você irá almoçar no IFC hoje?</h4>
-          <h6 class="confirmacao-aluno__data">{data_hoje}</h6>
-          <div class="col s6 center">
-            <button type="submit" name="acao" id="acao" value="PresencaSim"
-            class="waves-effect btn login-section__button">
-              Sim
-            </button>
-          </div>
-          <div class="col s6 center">
-            <button type="submit" name="acao" id="acao" value="PresencaNao"
-            class="waves-effect btn login-section__button almocai vermelho">
-              Não
-            </button>
-          </div>
-          <input type="hidden" name="data" id="data" value="{data_bd}">
-        </div>
-      </form>
-    </div>
+    <!-- Confimação do aluno -->
+    {{cartao_presenca}}
 
     <!-- Primeiro cartão -->
     {{cartao_dia}}
