Sistema mostra presença selecionada ao aluno (obs: aparência pode ser melhorada)

--- a/aluno/main.html
+++ b/aluno/main.html
@@ -9,6 +9,8 @@
 
 <div class="section container">
   <div class="row">
+    <!-- Cartão com a presença que o aluno selecionou o que o sistema determinou automaticamente pela frequência -->
+    {{cartao_presenca_selecionada}}
 
     <!-- Confimação do aluno -->
     {{cartao_presenca}}
