--- a/aluno/cardapio/dia_cartao.html
+++ b/aluno/cardapio/dia_cartao.html
@@ -5,6 +5,25 @@
       <span class="cardapio__cabecalho-span cardapio__cabecalho-span--{num_dia}">{dia_semana}</span>
     </h4>
     <div class="row">
+      <form class="col s12 center-align" action="{root_path}aluno/acao.php" method="post">
+        <p>Almoçará no IFC neste dia?</p>
+        <button type="submit" name="acao" id="acao" value="PresencaSim"
+        class="almocai btn waves-effect waves-light">
+          Sim
+        </button>
+        <button type="submit" name="acao" id="acao" value="PresencaNao"
+        class="almocai btn vermelho waves-effect waves-light">
+          Não
+        </button>
+        <input type="hidden" name="dia_cod" id="dia_cod" value="{dia_cod}">
+        <input type="hidden" name="redir" id="redir" value="cardapio">
+      </form>
+      <div class="col s12 center-align" style="margin-top:1rem;">
+        (você selecionou <b class="almocai white-text {cor}" style="padding: .2rem; ">{txt}</b>)
+      </div>
+    </div>
+    <div class="divider" style="margin-top:1rem;"></div>
+    <div class="row">
       <div class="col s12">
         <ul class="cardapio__lista">
           {{alimentos}}
