Contagem de presença de um dia

--- a/funcionario/main.html
+++ b/funcionario/main.html
@@ -11,7 +11,7 @@
 <div class="funcionario row container">
   <div class="col s12 m6 l3">
     <div class="funcionario__card almocai-text text-azul">
-      <h3 class="funcionario__card--title">Quantidade de alunos que irão almoçar hoje</h3>
+      <h3 class="funcionario__card--title">Total de alunos que irão almoçar hoje</h3>
       <h4 class="funcionario__card--qtd">{qtd_almocos}</h4>
     </div>
   </div>
@@ -19,7 +19,7 @@
   <!-- Carnívoros -->
   <div class="col s12 m6 l3">
     <div class="funcionario__card almocai-text text-vermelho">
-      <h3 class="funcionario__card--title">Quantidade de alunos carnívoros</h3>
+      <h3 class="funcionario__card--title">Quantidade de alunos que comem carne</h3>
       <h4 class="funcionario__card--qtd">{qtd_carnivoros}</h4>
     </div>
   </div>
