--- a/Interface/aluno/cardapio/index.html
+++ b/Interface/aluno/cardapio/index.html
@@ -60,15 +60,30 @@
     </div>
 
     <div class="section container cardapio">
+
+      <div class="row">
+        <div class="col s12 m6 center">
+          <a href="" class="waves-effect btn btn-large cardapio__confirmacao--btn--1">Presença em todos</a>
+        </div>
+        <div class="col s12 m6 center">
+          <a href="" class="waves-effect btn btn-large cardapio__confirmacao--btn--1 almocai vermelho">Ausência em todos</a>
+        </div>
+      </div>
+
       <div class="row">
         
         <!-- Primeiro cartão -->
         <div class="col s12 m6 l4 xl3">
-          <div class="card-panel cardapio__painel">
+          <div class="card-panel cardapio__painel aluno__confirmado">
             <div class="cardapio__picture cardapio__picture--1"></div>
             <h4 class="cardapio__cabecalho">
               <span class="cardapio__cabecalho-span cardapio__cabecalho-span--1">Segunda feira</span>
             </h4>
+            <div class="row">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--confirmado">Almoçarei!</p>
+              </div>
+            </div>
             <div class="row">
               <div class="col s12">
                 <ul class="cardapio__lista">
@@ -80,16 +95,34 @@
                 </ul>
               </div>
             </div>
+            <div class="row cardapio__confirmacao">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--title">Almocará no IFC neste dia?</p>
+                <div class="row">
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn">Sim</a>
+                  </div>
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn almocai vermelho">Não</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Segundo cartão -->
         <div class="col s12 m6 l4 xl3">
-          <div class="card-panel cardapio__painel">
+          <div class="card-panel cardapio__painel aluno__negado">
             <div class="cardapio__picture cardapio__picture--2"></div>
             <h4 class="cardapio__cabecalho">
               <span class="cardapio__cabecalho-span cardapio__cabecalho-span--2">Terça feira</span>
             </h4>
+            <div class="row">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--negado">Não almoçarei!</p>
+              </div>
+            </div>
             <div class="row">
               <div class="col s12">
                 <ul class="cardapio__lista">
@@ -101,16 +134,34 @@
                 </ul>
               </div>
             </div>
+            <div class="row cardapio__confirmacao">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--title">Almocará no IFC neste dia?</p>
+                <div class="row">
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn">Sim</a>
+                  </div>
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn almocai vermelho">Não</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Terceiro cartão -->
         <div class="col s12 m6 l4 xl3">
-          <div class="card-panel cardapio__painel">
+          <div class="card-panel cardapio__painel aluno__confirmado">
             <div class="cardapio__picture cardapio__picture--3"></div>
             <h4 class="cardapio__cabecalho">
               <span class="cardapio__cabecalho-span cardapio__cabecalho-span--3">Quarta feira</span>
             </h4>
+            <div class="row">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--confirmado">Almoçarei!</p>
+              </div>
+            </div>
             <div class="row">
               <div class="col s12">
                 <ul class="cardapio__lista">
@@ -122,16 +173,34 @@
                 </ul>
               </div>
             </div>
+            <div class="row cardapio__confirmacao">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--title">Almocará no IFC neste dia?</p>
+                <div class="row">
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn">Sim</a>
+                  </div>
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn almocai vermelho">Não</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Quarto cartão -->
         <div class="col s12 m6 l4 offset-l4 xl3">
-          <div class="card-panel cardapio__painel">
+          <div class="card-panel cardapio__painel aluno__negado">
             <div class="cardapio__picture cardapio__picture--4"></div>
             <h4 class="cardapio__cabecalho">
               <span class="cardapio__cabecalho-span cardapio__cabecalho-span--4">Quinta feira</span>
             </h4>
+            <div class="row">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--negado">Não almoçarei!</p>
+              </div>
+            </div>
             <div class="row">
               <div class="col s12">
                 <ul class="cardapio__lista">
@@ -141,6 +210,19 @@
                   <li>Salada</li>
                   <li>Legumes <img src="../../assets/img/aluno/cartoes/folha.svg" class="cardapio__lista--icon"></li>
                 </ul>
+              </div>
+            </div>
+            <div class="row cardapio__confirmacao">
+              <div class="col s12">
+                <p class="cardapio__confirmacao--title">Almocará no IFC neste dia?</p>
+                <div class="row">
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn">Sim</a>
+                  </div>
+                  <div class="col s6 center">
+                    <a href="" class="waves-effect btn cardapio__confirmacao--btn almocai vermelho">Não</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
