--- a/aluno/cartao_presenca_selecionada.html
+++ b/aluno/cartao_presenca_selecionada.html
@@ -1,5 +1,7 @@
 <!-- Mostra o que o usuário selecionou em relação a presença -->
-<div class="card-panel almocai white-text {cor}">
-  Você selecionou: 
-  <h3>{presenca_selecionada}</h3>
+<div class="row" style="margin-top: 1rem;">
+  <div class="col s12 card-panel almocai white-text {cor}" style="padding: 1rem;"">
+    Você selecionou:
+    <h3>{presenca_selecionada}</h3>
+  </div>
 </div>
